# clipzy

./: .gitignore  README.md  README_EN.md  eslint.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.vercel/: project.json
.vercel/cache/node/api/get.ts/: tsconfig-with-tsconfig-json.json
.vercel/cache/node/api/store.ts/: tsconfig-with-tsconfig-json.json
app/: _md.tsx  globals.css  layout.tsx  metadata.ts  page.tsx  providers.tsx  robots.ts  sitemap.ts
app/api/_utils/: upstash.ts
app/api/get/: route.ts
app/api/lan/signal/: route.ts
app/api/raw/[id]/: route.ts
app/api/store/: route.ts
app/changelog/: layout.tsx  page.tsx
app/docs/: page.tsx
app/history/: layout.tsx  page.tsx
app/image/: layout.tsx  page.tsx
app/lan/: layout.tsx  page.tsx
app/pricing/: layout.tsx  page.tsx
app/privacy/: layout.tsx  page.tsx
app/sysinfo/: layout.tsx  page.tsx
components/: AnnouncementBar.tsx  Footer.tsx  GlobalAnnouncementBar.tsx  QRCodeModal.tsx  button.tsx
hooks/: useClipLogic.ts  useClipboardUtils.ts  useFileTransfer.ts  useImageUpload.ts  useLanTransfer.ts  useSyntaxHighlighting.ts  useThemeManager.ts
lib/: crypto.ts  indexeddb.ts
public/: site.webmanifest
sysinfo-cpp/: CMakeLists.txt  main.cpp
